fixed button and bottle image a bit on mobile

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3660,7 +3660,7 @@ button.btn.btn.btn{
   padding-right:2rem;
   border-radius:0;
   border:0;
-  font-weight:bold;
+  font-weight:normal;
 }
 button.btn.btn.btn:hover{
   background-color:#f26621 !important;
@@ -3694,7 +3694,8 @@ gallery{
   position:absolute;
   top:0;
   left:0;
-  width:100%;
+  width:90%;
+  margin:0 auto;
   height:100%;
   opacity:0;
   transition:all 400ms ease-in-out;
@@ -3708,6 +3709,7 @@ gallery{
 }
 .gallery-thumbs{
   margin-top:10px;
+  text-align:center;
 }
 .gallery-thumbs label{
   cursor:pointer;
@@ -3716,6 +3718,7 @@ gallery{
 .gallery-thumbs label img{
   padding:0.5rem;
   border:2px solid #b6bde9;
+  max-width:50px;
 }
 .last-button,
 .next-button{
@@ -3725,10 +3728,10 @@ gallery{
   cursor:pointer;
 }
 .last-button{
-  left:-2rem;
+  left:-1rem;
 }
 .next-button{
-  right:-2rem;
+  right:-1rem;
 }
 price{
   display:block;
@@ -3946,6 +3949,8 @@ footer .footer-bottom > *{
   padding-top:10vh;
   padding-bottom:20vh;
   font-size:16px;
+  padding-left:1rem;
+  padding-right:1rem;
 }
 #index #shop #shop-widget .title .hb{
   font-family:Palatino;
