--- a/src/css/components/gallery.styl
+++ b/src/css/components/gallery.styl
@@ -26,6 +26,7 @@ gallery
 
 .gallery-thumbs
   margin-top: 10px
+  text-align: center
 
   label
     cursor: pointer
@@ -34,7 +35,7 @@ gallery
     img
       padding: .5rem
       border: 2px solid $hLavender
-      max-width: 
+      max-width: 50px
 
 .last-button
 .next-button
