--- a/src/css/inputs.styl
+++ b/src/css/inputs.styl
@@ -4,7 +4,7 @@ button.btn.btn.btn
   padding-right: 2rem
   border-radius: 0
   border: 0
-  font-weight: bold
+  font-weight: normal
 
   &:hover
     background-color: $hOrange !important
@@ -15,4 +15,3 @@ select.select.select.select
   outline: none
   border: 2px solid $hBlue2
   border-radius: 0
-
